--- a/www/templates/deal-popover.html
+++ b/www/templates/deal-popover.html
@@ -8,18 +8,7 @@
 	 <div class="item-body" style="padding-left: 0">
           <strong>Standard TnCs</strong>
           <ul class="tnc">
-            <li>
-              Items listed in the offer are subject to availability at the outlet.
-            </li>
-            <li>
-              Cannot be combined with other offers, unless specified.
-            </li>
-            <li>
-              Serving time may vary during peak hours.
-            </li>
-            <li>
-              Alcohol and any age-restricted products will be served only above age permitted by law.
-            </li>
+            {{ offer.terms }}
           </ul>
         </div>
 </ion-content>
