--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -4,9 +4,9 @@
       <img src="img/logo-ro.png" class="logo-main">
     </div>
     <div class="row fb-btn">
-      <div class="col"></div>
-      <button class="button button-block button-positive" ng-click="login()" style="font-weight: 500"><i class="ion-social-facebook" style="margin-right: 10px; font-size: 20px; "></i>Continue with Facebook</button>
-      <div class="col"></div>
-  </div>
+      <div class="col">
+        <button class="button button-block button-positive" ng-click="login()" style="font-weight: 500"><i class="ion-social-facebook" style="margin-right: 10px; font-size: 20px; "></i>Continue with Facebook</button>
+      </div>
+    </div>
   </div>
 </ion-view>
