--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,6 +24,10 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Account" icon-off="ion-ios-person" icon-on="ion-ios-person" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
+  <!--Chnage Phone Number-->
+  <ion-tab title="Phone Number Setting" icon-off="ion-ios-person" icon-on="ion-ios-person" href="#/tab/chnage_number">
+    <ion-nav-view name="tab-changenumber"></ion-nav-view>
+  </ion-tab>
 
 
 </ion-tabs>
