--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -33,6 +33,9 @@
         <li class="item">
           <a class="item-a" href="#/tab/account">My Account</a>
         </li>
+        <li class="item">
+          <a class="item-a" ng-click="goToPhone()">Change Phone</a>
+        </li>
       </ul>
     </ion-side-menu>
 
